--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,42 @@
-Flask==2.2.1
+black==22.3.0
+California-Housing-Predictor==0.0.1
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+click==8.1.2
+colorama==0.4.4
+cryptography==36.0.2
+cycler==0.11.0
+docopt==0.6.2
+Flask==2.1.1
+fonttools==4.32.0
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+joblib==1.1.0
+kiwisolver==1.4.2
+MarkupSafe==2.1.1
+matplotlib==3.5.1
+mypy-extensions==0.4.3
+numpy==1.22.3
+packaging==21.3
+pandas==1.4.2
+pathspec==0.9.0
+Pillow==9.1.0
+pipreqs==0.4.11
+platformdirs==2.5.1
+pycparser==2.21
+pyparsing==3.0.7
+python-dateutil==2.8.2
+pytz==2022.1
+requests==2.27.1
+scikit-learn==1.0.2
+scipy==1.8.0
+seaborn==0.11.2
+six==1.16.0
+threadpoolctl==3.1.0
+tomli==2.0.1
+urllib3==1.26.9
+Werkzeug==2.1.1
+yarg==0.1.9
 -e .
